--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest-cli": "^24.9.0",
     "opn-cli": "^5.0.0",
+    "prettier-eslint": "^11.0.0",
     "raw-loader": "^3.1.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.3",
